--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-bin test",
+    "start": "egg-scripts start --daemon",
     "stop": "egg-scripts stop",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
