--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "WechatDemo",
+  "name": "EggWechat",
   "version": "1.0.0",
-  "description": "wechat demo applicaiton",
+  "description": "",
   "private": true,
   "dependencies": {
-    "co-wechat": "^2.3.0",
-    "co-wechat-api": "^3.3.4",
-    "co-wechat-oauth": "^2.0.1",
-    "co-wechat-payment": "^0.2.0",
     "egg": "^2.0.0",
-    "egg-scripts": "^2.1.0",
-    "egg-wechat": "^1.0.6",
-    "wechat": "^2.1.0"
+    "egg-scripts": "^2.1.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
@@ -27,7 +21,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start",
+    "start": "egg-scripts start --daemon",
     "stop": "egg-scripts stop",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
@@ -45,6 +39,6 @@
     "type": "git",
     "url": ""
   },
-  "author": "nehcob",
+  "author": "",
   "license": "MIT"
 }
