--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.1",
     "co-wechat": "^2.3.0",
     "egg": "^2.0.0",
     "egg-scripts": "^2.1.0",
-    "sha1": "^1.1.1"
+    "ejs": "^2.5.7",
+    "heredoc": "^1.3.1",
+    "sha1": "^1.1.1",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "autod": "^3.0.1",
