clean eslint error

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.1",
     "co-wechat": "^2.3.0",
     "egg": "^2.0.0",
+    "egg-logger": "^1.6.1",
     "egg-scripts": "^2.1.0",
     "ejs": "^2.5.7",
     "heredoc": "^1.3.1",
