--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-scripts": "^2.1.0",
     "ejs": "^2.5.7",
     "heredoc": "^1.3.1",
+    "request": "^2.83.0",
     "sha1": "^1.1.1",
     "xml2js": "^0.4.19"
   },
