--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.1",
-    "co-wechat": "^2.3.0",
     "content-type": "^1.0.4",
     "egg": "^2.0.0",
     "egg-logger": "^1.6.1",
     "egg-scripts": "^2.1.0",
+    "egg-view-nunjucks": "^2.1.4",
     "ejs": "^2.5.7",
+    "firebase": "^4.9.1",
     "heredoc": "^1.3.1",
     "request": "^2.83.0",
     "sha1": "^1.1.1",
